# lboxd-list-api

./: .dockerignore  .gitignore  Dockerfile  README.md  conftest.py  dbconnect.py  dependencies.py  main.py  pyproject.toml  requirements.txt
constants/: query.py
models/: __init__.py  query.py
routers/: __init__.py  admin.py  dbconnect.py  list.py  movie.py  scraper.py
routes/: scraper.py
scripts/: __init__.py  index.py  rating.py  utils.py
services/: __init__.py  letterboxd_service.py  list_service.py  movie_service.py  scraper_service.py
src/: main.py  pyproject.toml
src/tests/: connect_test.py  querydb_test.py
tests/: endpoints.py  querydb_test.py
