[project]
name = "letterboxd-list-api"
version = "2025.0.1"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.1",
  "pymongo",
  "uvicorn",
  "certifi",
  "python-dotenv",
  "requests>=2.32.4",
  "beautifulsoup4>=4.13.4",
  "lxml>=5.4.0",
]

[project.optional-dependencies]
webscraper = [
  "beautifulsoup4>=4.12.3",
]
webscraper_test = [
  "tqdm",
  "beautifulsoup4>=4.12.3"
]
testing = [
  "ruff",
  "pytest"
]

[tool.pytest.ini_options]
minversion = "8.0"
env_files = [
  ".test.env"
]
