[project]
name = "letterboxd-list-api"
version = "2025.0.1"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.1",
  "pymongo",
  "uvicorn",
  "certifi",
  "python-dotenv",
  "requests>=2.32.4",
  "beautifulsoup4>=4.13.4",
  "lxml>=5.4.0",
]

[project.optional-dependencies]
webscraper = [
  "beautifulsoup4>=4.12.3",
]
webscraper_test = [
  "tqdm",
  "beautifulsoup4>=4.12.3"
]
testing = [
  "ruff",
  "pytest",
  "httpx>=0.28.1",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
